# besserwisser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.TXT  README.md  SimpleNet.sln  blob.cpp  blob.h  get-mnist.sh  layer.cpp  layer.h  main.cpp  math_util.cpp  math_util.h  mnist.cpp  mnist.h  network.cpp  network.h  train.cpp  train.h
SimpleNet/: SimpleNet.cpp  SimpleNet.vcxproj  SimpleNet.vcxproj.filters  layer.cpp  layer.h  main.cpp  math_util.cpp  math_util.h  network.cpp  network.h  stdafx.cpp
